2003-10-26  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h (xalloc_oversized): New static inline function, for
	callers that want to do their own size-overflow checking.  Include
	<stdbool.h>, since xalloc_oversized returns bool.
	* xalloc.c (array_size_overflow): Remove.  All callers changed
	to use xalloc_oversized.

	Add two functions x2realloc, x2nrealloc, for programs that grow
	arrays dynamically by doubling their sizes.
	* xalloc.h (x2realloc, x2nrealloc): New decls.
	* xmalloc.c (x2nrealloc_inline, x2nrealloc, x2realloc):
	New functions.

	Port to C99 semantics for 'inline' of external functions.
	Bug reported by Bruno Haible.
	* xmalloc.c (xnmalloc_inline): New static inline function,
	with the old contents of xnmalloc.
	(xnmalloc, xmalloc): Use it.
	(xnrealloc_inline): New static inline function,
	with the old contents of xnrealloc.
	(xnrealloc, xrealloc): Use it.

	* alloc.c (alloca): xmalloc cannot return NULL, so don't test for that.

2003-10-25  Paul Eggert  <eggert@twinsun.com>

	Fix several address-calculation bugs in the hash modules,
	plus some minor code cleanup.

	* hash.h: Include <stdbool.h>, for bool.
	* hash.c: Don't include <stdbool.h>, since hash.h does it now.
	* hash.h (Hash_hasher, hash_get_n_buckets, hash_get_n_buckets_used,
	hash_get_n_entries, hash_get_max_bucket_length,
	hash_get_entries, hash_do_for_each, hash_string, hash_initialize,
	hash_rehash): Use size_t rather than unsigned.
	* hash.c (struct hash_table, hash_get_n_buckets,
	hash_get_n_buckets_used, hash_get_n_entries,
	hash_get_max_bucket_length, hash_table_ok, hash_print_statistics,
	hash_get_entries, hash_do_for_each, hash_string, is_prime,
	next_prime, hash_initialize, hash_rehash, hash_delete, hash_print):
	Likewise.
	(SIZE_MAX): Define if not defined.
	(hash_get_max_bucket_length, hash_table_ok, hash_lookup,
	hash_get_first, hash_get_next, hash_get_entries, hash_do_for_each,
	hash_print):
	Use const * when possible.